# llm-inspector

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  V4_UPGRADE_PLAN.md  V5_IMPLEMENTATION_STATUS.md  V5_UPGRADE_PLAN.md  V6_UPGRADE_PLAN.md  V7_UPGRADE_PLAN.md  analysis_pipeline.py  methods.py  suite.json  v10_upgrade_plan.md
llm-inspector/: OPTIMIZATION_PLAN.md  pyproject.toml  requirements.txt  start.bat  start.sh  stop.bat
llm-inspector/backend/: debug_params.py  requirements.txt  start.py
llm-inspector/backend/app/: main.py  routes.py
llm-inspector/backend/scripts/: add_new_cases.py  build_reference_embeddings.py  build_suite_v13.py  fit_thresholds.py  fit_weights.py  fit_weights_v14.py  irt_data_collection.py  mass_model_test.py  migrate_v10_suite.py  phase5_validation_results.json  prune_by_iif.py  sample_timing_references.py  setup_dependencies.py  validate_phase1.py  validate_phase2.py  validate_phase3.py  validate_phase4.py  validate_phase5.py  validity_experiment.py  verify_tokenizer_probes.py
llm-inspector/backend/tests/: conftest.py  test_all.py  test_all_legacy.py  test_core_pipeline.py  test_dual_judge.py  test_kg_consistency.py  test_layers_15_16.py  test_legacy_runner.py  test_lineage_guard.py  test_progress_completeness.py  test_scoring_v13.py  test_v14_phase2.py  test_v14_phase3.py  test_v14_phase4.py  test_v14_phase5.py  test_v14_phase6.py  test_v14_phase7.py  test_v14_phase8.py  (+35 more)
llm-inspector/docs/: MIGRATION_v13_to_v14.md
llm-inspector/frontend/: app.js  index.html  styles.css  v7_visualization.js  v8_demo.html  v8_styles.css
llm-inspector/sandbox-test/: .env.example  setup.ps1
(+228 files in other folders)
