[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-inspector"
version = "1.0.0"
description = "LLM 套壳检测工具 — 多层行为指纹分析"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "cryptography>=41",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
# Exclude archived legacy tests (v8/v9/v11 regression suites moved to archive/ in v14 Phase 1)
norecursedirs = ["backend/tests/archive", "backend/tools", ".git", "__pycache__", ".pytest_cache"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
